# bridge-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: generate_graphs.py
src/bridge_mcp/: __init__.py  instructions.py  server.py
src/bridge_mcp/graph/: __init__.py  invariants.py  tools.py
src/bridge_mcp/mathql/: __init__.py  column.py  compile.py  context.py  database.py  execute.py  expr.py  grammar.lark  input.py  operators.py  parser.py  query-grammar.md  query.py  query_json.py  result.py  sql.py  tools.py  typecheck.py  types.py
src/bridge_mcp/mathql/databases/: __init__.py  graphs_small.py  math-data.db  math_data.py  small_graphs.py
tests/: test_column.py  test_compile.py  test_database.py  test_execute.py  test_graph.py  test_parser.py  test_query_json.py  test_server.py  test_sql.py  test_typecheck.py  test_types.py
