[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bridge-mcp"
version = "0.1.0"
description = "MCP server for the Bridge project (AI for Math)"
readme = "README.md"
requires-python = ">=3.11"
license = "BSD-2-Clause"
dependencies = [
    "mcp[cli]",
    "lark",
    "networkx",
]

[project.optional-dependencies]
dev = ["pytest", "mypy", "ruff"]

[project.scripts]
bridge-mcp = "bridge_mcp.server:main"

[tool.hatch.build]
artifacts = ["src/bridge_mcp/mathql/databases/*.db"]

[tool.hatch.build.targets.wheel]
packages = ["src/bridge_mcp"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = ["networkx.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 95
